2008-01-12  Paf <paf@tuxfamily.org>
	* src/main.cpp: SoundManager paths can also be initialized through command
	line parameters
	* src/sound/src/csoundmodule.cpp: Delete default repositories
	initialization

2008-01-12  Paf <paf@tuxfamily.org>
	* src/core/src/camerathirdpersonlistene.cpp: Remove this file. It's a typo
	from src/core/src/camerathirdpersonlistener.cpp

2008-01-12  Paf <paf@tuxfamily.org>
	* src/input/include/cmousemotioneventstranslator.h: Initial release
	* src/input/include/cinputeventstranslator.h: Add code for using
	CMouseMotionEventsTranslator
	* src/input/include/ckeyboardtranslationevents.h : Renamed to
	src/input/include/ctranslationevents.h; Add some comments
	* src/input/include/coisinputmanager.h: Remove \r
	* src/input/src/cmousemotioneventstranslator.cpp: Initial release
	* src/input/src/cinputeventstranslator.cpp: Add code for using
	CMouseMotionEventsTranslator
	* src/input/src/ckeyboardeventstranslator.cpp:­Rename
	ckeyboardtranslationevents.h to ctranslationevents.h
	* src/main.cpp: Use boost::program_option to parse parameters. Option
	currently implemented provide a way to add new loading/saving path for
	PersistentObject objects
	* src/core/include/camerafirstpersonlistener.h: Remove \r
	* src/core/include/camerafirstperson.h: Remove \r
	* src/core/src/camerathirdpersonlistene.cpp: Remove \r and add some empty
	lines at the end of the file
	* Makefile.am: Create a launch script at installation time. So the data
	path can be passed as an argument to gnoll at launch time

2008-01-10  Paf <paf@tuxfamily.org>
	* src/input/include/cinputmouseevents.h: Remove \r
	* src/input/include/cinputeventstranslator.h: Initial release
	* src/input/include/ckeyboardeventstranslator.h: Initial release
	* src/input/include/ckeyboardtranslationevents.h: Initial release
	* src/input/src/cinputeventstranslator.cpp: Initial release
	* src/input/src/ckeyboardeventstranslator.cpp: Initial release
	* src/input/src/coisinputmodule.cpp: Remove \r